--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>El Rincón del Sabor</title>
   </head>
   <body>
-    <header class="header">
+    <header>
       <div class="bg-dark">
         <div class="d-flex container justify-content-between p-1">
           <p class="my-auto">Reservación: (381) 692734</p>
@@ -31,7 +31,7 @@
           </div>
         </div>
       </div>
-      <nav class="navbar navbar-expand-lg bg-nav">
+      <nav class="navbar navbar-expand-lg bg-nav position-fixed">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><img class="logo" src="./img/logo_large.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,6 +65,27 @@
           </div>
         </div>
       </nav>
+      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img class="img-fluid" src="./img/slaider/slaider-1.jpeg" class="d-block w-100" alt="carousel">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img class="img-fluid" src="./img/slaider/slaider-2.jpeg" class="d-block w-100" alt="carousel">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img class="img-fluid" src="./img/slaider/slaider-3.jpeg" class="d-block w-100" alt="carousel">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </header>
     <main></main>
     <footer></footer>
