--- a/index.html
+++ b/index.html
@@ -32,62 +32,152 @@
         </div>
       </div>
       <nav class="navbar navbar-expand-lg bg-nav position-fixed">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="./img/logo_large.png" alt=""></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container-fluid py-2 mt-3">
+          <a class="navbar-brand" href="#"
+            ><img class="logo" src="./img/logo_large.png" alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#"><i class="bi bi-house-door"></i> Inicio</a>
+                <a class="nav-link active" href="#"
+                  ><i class="bi bi-house-door"></i> Inicio</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-clipboard"></i> Detalle</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-clipboard"></i> Detalle</a
+                >
               </li>
-              
+
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-cart"></i> Pedidos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-tools"></i> Administrador</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-person-circle"></i> Iniciar sesión</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-cart"></i> Pedidos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-tools"></i> Administrador</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><i class="bi bi-people"></i> Registrarse</a>
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-person-circle"></i> Iniciar sesión</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-box-arrow-left"></i> Cerrar sesión</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="bi bi-people"></i> Registrarse</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div
+        id="carouselExampleInterval"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="2000">
-            <img class="img-fluid" src="./img/slaider/slaider-1.jpeg" class="d-block w-100" alt="carousel">
+            <img
+              class="img-fluid"
+              src="./img/slaider/slaider-1.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img class="img-fluid" src="./img/slaider/slaider-2.jpeg" class="d-block w-100" alt="carousel">
+            <img
+              class="img-fluid"
+              src="./img/slaider/slaider-2.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
           <div class="carousel-item" data-bs-interval="2000">
-            <img class="img-fluid" src="./img/slaider/slaider-3.jpeg" class="d-block w-100" alt="carousel">
+            <img
+              class="img-fluid"
+              src="./img/slaider/slaider-3.jpeg"
+              class="d-block w-100"
+              alt="carousel"
+            />
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="container text-center mt-5">
+        <div class="row">
+          <div class="col">
+            <h1 class="titulo">Acerca De</h1>
+            <h5>SOMOS EL RESTAURANTE TRADICIONAL Y DE MEJOR CALIDAD</h5>
+            <hr class="linea" />
+            <p>
+              Nuestra pasión por la cocina auténtica y la hospitalidad, El
+              Rincón del Sabor nació con el sueño de crear un espacio donde la
+              comida excepcional se convirtiera en una experiencia
+              memorable.Hemos evolucionado hacia un lugar donde la tradición se
+              mezcla con la innovación culinaria.
+            </p>
+          </div>
+          <div class="col">
+            <div>
+              <div>
+                <img class="img-acerca" src="./img/fideos.jpeg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="mt-5">
+        <article class="position-relative">
+          <div class="section-menu">
+            <img class="bg-menu" src="./img/seccion-bg-menu.jpg" alt="">
+          </div>
+          <div class="section-text">
+            <h2>Nuestro menú</h2>
+            <div class="text-center">
+              <a href="#"><img class="img-menu" src="./img/icono-plato.png" alt="menu"></a>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
     <footer></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
