realize el maquetado del la seccion del menu de la semana

--- a/index.html
+++ b/index.html
@@ -167,15 +167,174 @@
       <section class="mt-5">
         <article class="position-relative">
           <div class="section-menu">
-            <img class="bg-menu" src="./img/seccion-bg-menu.jpg" alt="">
+            <img class="bg-menu" src="./img/seccion-bg-menu.jpg" alt="" />
           </div>
           <div class="section-text">
             <h2>Nuestro menú</h2>
             <div class="text-center">
-              <a href="#"><img class="img-menu" src="./img/icono-plato.png" alt="menu"></a>
+              <a href="#"
+                ><img class="img-menu" src="./img/icono-plato.png" alt="menu"
+              /></a>
             </div>
           </div>
         </article>
+      </section>
+      <section class="menu-espacial">
+        <h2>Especial de esta semana</h2>
+        <div class="row container mt-5 mx-auto">
+          <div class="col">
+            <div class="d-flex justify-content-evenly">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/cerdo.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">CERDO CAMARONES MULTICEREALES</h6>
+                <p class="text-secondary">
+                  Verduras, queso, champiñones, artículos a la parrilla
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$3500</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/taco.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">TACO RESIPIE SIN SLIZER</h6>
+                <p class="text-secondary">
+                  Verduras, queso, champiñones, artículos a la parrilla
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$2500</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/taco.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">TACO RESIPIE SIN SLIZER</h6>
+                <p class="text-secondary">
+                  Verduras, queso, champiñones, artículos a la parrilla
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$2500</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/taco.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">TACO RESIPIE SIN SLIZER</h6>
+                <p class="text-secondary">
+                  Verduras, queso, champiñones, artículos a la parrilla
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$2500</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/taco.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">TACO RESIPIE SIN SLIZER</h6>
+                <p class="text-secondary">
+                  Verduras, queso, champiñones, artículos a la parrilla
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$2500</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="d-flex justify-content-evenly">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/vegetales.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">HUEVO FRUTAS VEGETALES SALENTE</h6>
+                <p class="text-secondary">
+                  Huevo, queso, champiñones, verduras
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$5000</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/tomate-vegetal.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">MEZCLADORA DE TOMATE VEGETAL</h6>
+                <p class="text-secondary">
+                  Huevo, queso, champiñones, verduras
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$5000</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/tomate-vegetal.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">MEZCLADORA DE TOMATE VEGETAL</h6>
+                <p class="text-secondary">
+                  Huevo, queso, champiñones, verduras
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$5000</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/tomate-vegetal.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">MEZCLADORA DE TOMATE VEGETAL</h6>
+                <p class="text-secondary">
+                  Huevo, queso, champiñones, verduras
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$5000</h5>
+              </div>
+            </div>
+            <hr class="linea" />
+            <div class="d-flex justify-content-evenly mt-4">
+              <div class="img-menu-especial">
+                <img src="./img/menu-espacial/tomate-vegetal.jpg" alt="" />
+              </div>
+              <div>
+                <h6 class="titulo-menu">MEZCLADORA DE TOMATE VEGETAL</h6>
+                <p class="text-secondary">
+                  Huevo, queso, champiñones, verduras
+                </p>
+              </div>
+              <div class="precio">
+                <h5>$5000</h5>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
