--- a/index.html
+++ b/index.html
@@ -336,6 +336,64 @@
           </div>
         </div>
       </section>
+      <section class="reservacion mt-5">
+        <img src="./img/seccion-bg-reservacion.jpg" alt="">
+          <div class="formulario">
+            <h2>Reserva tu mesa</h2>
+            <form class="mx-auto w-50">
+              <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre*</label>
+                <input type="text" class="form-control" id="nombre" placeholder="Nombre" aria-label="nombre">
+              </div>
+              <div class="mb-3">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="apellido" placeholder="apellido" aria-label="apellido">
+              </div>
+              <div class="mb-3">
+                <label for="telefono" class="form-label">Número de teléfono</label>
+                <input type="number" class="form-control" id="telefono" placeholder="Número de teléfono" aria-label="telefono">
+              </div>
+              <div class="mb-3">
+                <label for="fecha" class="form-label">Elige tu fecha</label>
+                <input type="date" class="form-control" id="fecha" aria-label="fecha">
+              </div>
+              <div class="mb-3">
+                <label for="hora" class="form-label">Elige tu hora</label>
+                <input type="datetime" class="form-control" id="fecha" aria-label="hora">
+              </div>
+            </form>
+          </div>
+      </section>
+      <section class="testimonios mt-5">
+        <h2 class="text-center">Nuestros clientes dicen</h2>
+        <article id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner mx-auto text-center mt-5 ">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="./img/testimonios.png" alt="">
+              <h4 class="my-5">¡Una experiencia culinaria excepcional! La comida exquisita y el servicio impecable hacen de este restaurante un lugar al que siempre quiero volver.</h4>
+              <img src="./img/testimonios.png" alt="">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="./img/testimonios.png" alt="">
+              <h4 class="my-5">He quedado impresionado con la calidad de los platos y la atención al detalle. ¡Definitivamente uno de mis lugares favoritos para disfrutar de una buena comida!</h4>
+              <img src="./img/testimonios.png" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/testimonios.png" alt="">
+              <h4 class="my-5">Excelente servicio y una carta que supera las expectativas. Cada visita es una oportunidad para descubrir nuevos sabores y disfrutar de una experiencia gastronómica inigualable.</h4>
+              <img src="./img/testimonios.png" alt="">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </article>
+      </section>
     </main>
     <footer></footer>
     <script
