realize el maquetado del footer

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="row">
           <div class="col">
             <h1 class="titulo">Acerca De</h1>
-            <h5>SOMOS EL RESTAURANTE TRADICIONAL Y DE MEJOR CALIDAD</h5>
+            <h5 class="texto-secundario">SOMOS EL RESTAURANTE TRADICIONAL Y DE MEJOR CALIDAD</h5>
             <hr class="linea" />
             <p>
               Nuestra pasión por la cocina auténtica y la hospitalidad, El
@@ -368,17 +368,17 @@
         <h2 class="text-center">Nuestros clientes dicen</h2>
         <article id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner mx-auto text-center mt-5 ">
-            <div class="carousel-item active" data-bs-interval="10000">
+            <div class="carousel-item carousel-testimonio active" data-bs-interval="10000">
               <img src="./img/testimonios.png" alt="">
               <h4 class="my-5">¡Una experiencia culinaria excepcional! La comida exquisita y el servicio impecable hacen de este restaurante un lugar al que siempre quiero volver.</h4>
               <img src="./img/testimonios.png" alt="">
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
+            <div class="carousel-item carousel-testimonio" data-bs-interval="2000">
               <img src="./img/testimonios.png" alt="">
               <h4 class="my-5">He quedado impresionado con la calidad de los platos y la atención al detalle. ¡Definitivamente uno de mis lugares favoritos para disfrutar de una buena comida!</h4>
               <img src="./img/testimonios.png" alt="">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item carousel-testimonio">
               <img src="./img/testimonios.png" alt="">
               <h4 class="my-5">Excelente servicio y una carta que supera las expectativas. Cada visita es una oportunidad para descubrir nuevos sabores y disfrutar de una experiencia gastronómica inigualable.</h4>
               <img src="./img/testimonios.png" alt="">
@@ -395,7 +395,32 @@
         </article>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="row  text-center container mx-auto">
+        <div class="col-md-4 mt-4">
+         <a href="index.html"><img class="footer-logo my-5" src="./img/logo_large.png" alt=""></a>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Horarios:</h5>
+          <p>Lunes: 07:00 - 00:30 - Martes: 07:00 - 00:30</p>
+          <p>Miércoles: 07:00 - 00:30 - Jueves: 07:00 - 00:30</p>
+          <p>Viernes: 07:00 - 01:00 - Sábado: 08:00 - 01:00</p>
+          <p>Domingo: 09:00 - 13:00</p>
+        </div>
+        <div class="col-md-4 mt-4">
+          <h5>Nuestras redes</h5>
+          <div>
+            <a href="#"><i class="icono bi bi-facebook"></i></a>
+            <a class="mx-3" href="#"><i class="icono bi bi-twitter-x"></i></a>
+            <a href="#"><i class="icono bi bi-instagram"></i></a>
+
+          </div>
+        </div>
+      </section>
+      <div class="text-center mt-3 copy">
+        <p>© Copyrights 2024- Todos Los Derechos Reservados</p>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
