agregue el maquetado de la seccion de menu donde apareceran los productos

--- a/index.html
+++ b/index.html
@@ -56,12 +56,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"
-                  ><i class="bi bi-clipboard"></i> Detalle</a
-                >
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link" href="#"
                   ><i class="bi bi-cart"></i> Pedidos</a
                 >
               </li>
@@ -167,7 +161,7 @@
       <section class="seccion-bg-menu mt-5"> 
         <div class="menu">
           <h2>Nuestro menú</h2>
-          <a href="#"
+          <a href="./pages/menu.html"
             ><img class="img-fluid"  src="./img/icono-plato.png" alt="menu"
           /></a>
         </div>
