--- a/pages/categorias/postres.html
+++ b/pages/categorias/postres.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="../css/estilos.css" />
+    <link rel="stylesheet" href="../../css/estilos.css" />
     <title>El Rincón del Sabor</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
         <nav class="navbar navbar-expand-lg bg-nav position-fixed w-100">
           <div class="container-fluid py-2 mt-3">
             <a class="navbar-brand" href="#"
-              ><img class="logo" src="../img/logo_large.png" alt=""
+              ><img class="logo" src="../../img/logo_large.png" alt=""
             /></a>
             <button
               class="navbar-toggler"
@@ -92,7 +92,7 @@
             <div class="carousel-item portada active" data-bs-interval="2000">
               <img
                 class="img-fluid"
-                src="../img/slaider/slaider-1.jpeg"
+                src="../../img/slaider/slaider-1.jpeg"
                 class="d-block w-100"
                 alt="carousel"
               />
@@ -100,7 +100,7 @@
             <div class="carousel-item portada" data-bs-interval="2000">
               <img
                 class="img-fluid"
-                src="../img/slaider/slaider-2.jpeg"
+                src="../../img/slaider/slaider-2.jpeg"
                 class="d-block w-100"
                 alt="carousel"
               />
@@ -108,7 +108,7 @@
             <div class="carousel-item portada" data-bs-interval="2000">
               <img
                 class="img-fluid"
-                src="../img/slaider/slaider-3.jpeg"
+                src="../../img/slaider/slaider-3.jpeg"
                 class="d-block w-100"
                 alt="carousel"
               />
@@ -138,27 +138,60 @@
         <section>
             <ul class="navbar-nav menu-especialidades ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./categorias/sandwiches.html">SÁNDWICHES</a>
+                    <a class="nav-link" href="./sandwiches.html">SÁNDWICHES</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">PIZZAS</a>
+                    <a class="nav-link" href="./pizzas.html">PIZZAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">BEBIDAS</a>
+                    <a class="nav-link" href="./bebidas.html">BEBIDAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">POSTRES</a>
+                    <a class="nav-link active" href="./postres.html">POSTRES</a>
                 </li>
             </ul>
         </section>
-        <section>
-           
+        <section class="my-5">
+            <div class="container text-center">
+                <div class="row mt-4 menu-sandwich justify-content-evenly">
+                  <div class="col-md-4 col-sm-12 card-menu">
+                    <div class="card-img">
+                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+                    </div>
+                    <div class="card-bg ">
+                        <h5>Pizza</h5>
+                        <p>$3500</p>
+                        <button class="btn">Agregar a pedidos</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4 col-sm-12 card-menu">
+                    <div class="card-img">
+                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+                    </div>
+                    <div class="card-bg py-2">
+                        <h5>Pizza</h5>
+                        <p>$3500</p>
+                        <button class="btn">Agregar a pedidos</button>
+                    </div>
+                  </div>
+                  <div class="col-md-4 col-sm-12 card-menu">
+                    <div class="card-img">
+                        <img class="img-fluid" src="../../img/cat-postres/postres.jpeg" alt="">
+                    </div>
+                    <div class="card-bg">
+                        <h5>Pizza</h5>
+                        <p>$3500</p>
+                        <button class="btn">Agregar a pedidos</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </section>
       </main>
       <footer>
         <section class="row  text-center container mx-auto">
           <div class="col-md-4 mt-4">
-           <a href="index.html"><img class="footer-logo my-5" src="./img/logo_large.png" alt=""></a>
+           <a href="index.html"><img class="footer-logo my-5" src="../../img/logo_large.png" alt=""></a>
           </div>
           <div class="col-md-4 mt-4">
             <h5>Horarios:</h5>
