agregue el maquetado de administrador usuarios y mi cuenta

--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -21,7 +21,7 @@
   </head>
   <body class="body-admin">
     <header>
-      <nav class="navbar bg-dark">
+      <nav class="navbar bg-dark w-100">
         <div class="container text-end">
           <button
             class="navbar-toggler btn-color"
@@ -62,19 +62,19 @@
                 </li>
                 <hr />
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="./adminUsuarios.html"
                     ><i class="bi bi-people"></i> Usuarios</a
                   >
                 </li>
                 <hr />
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="./miCuenta.html"
                     ><i class="bi bi-person-circle"></i> Mi cuenta</a
                   >
                 </li>
                 <hr />
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="../../index.html"
                     ><i class="bi bi-box-arrow-left"></i> Salir</a
                   >
                 </li>
@@ -85,7 +85,7 @@
       </nav>
     </header>
     <main class="administrador container mb-5">
-        <h2>Productos</h2>
+        <h2><i class="bi bi-dropbox"></i> Productos</h2>
         <hr>
         <section class="table-responsive"> 
             <button class="btn btn-agregar my-2"><i class="bi bi-plus-square"></i> Nuevo</button>
