--- a/pages/administrador/miCuenta.html
+++ b/pages/administrador/miCuenta.html
@@ -62,13 +62,13 @@
                 </li>
                 <hr />
                 <li class="nav-item">
-                  <a class="nav-link active" href="#"
+                  <a class="nav-link" href="./adminUsuarios.html"
                     ><i class="bi bi-people"></i> Usuarios</a
                   >
                 </li>
                 <hr />
                 <li class="nav-item">
-                  <a class="nav-link" href="./miCuenta.html"
+                  <a class="nav-link active" href="./miCuenta.html"
                     ><i class="bi bi-person-circle"></i> Mi cuenta</a
                   >
                 </li>
@@ -85,10 +85,10 @@
       </nav>
     </header>
     <main class="administrador container mb-5">
-        <h2><i class="bi bi-people"></i> Usuarios</h2>
+        <h2><i class="bi bi-person-circle"></i> Mi cuenta</h2>
         <hr>
         <section class="table-responsive"> 
-            <button class="btn btn-agregar my-2"><i class="bi bi-plus-square"></i> Nuevo</button>
+            
             <table class="table table-striped">
                 <thead>
                   <tr>
