agregue la validacion del formulario de crear producto

--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -246,8 +246,8 @@
                   class="form-control"
                   id="precio"
                   placeholder="Precio"
-                  minlength="3"
-                  maxlength="100"
+                  minlength="1"
+                  maxlength="10000"
                   required
                 />
               </div>
@@ -263,6 +263,7 @@
                   required
                 />
               </div>
+              <div class="alert alert-danger mt-3 d-none" role="alert" id="alerta"></div>
               <div class="mb-3">
                 <button type="submit" class="btn btn-iniciar">Enviar</button>
               </div>
