agregue las validaciones del administrador productos

--- a/pages/administrador/adminProductos.html
+++ b/pages/administrador/adminProductos.html
@@ -246,6 +246,7 @@
                   class="form-control"
                   id="precio"
                   placeholder="Precio"
+                  min="0"
                   minlength="1"
                   maxlength="10000"
                   required
